--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Svelte + TS + Vite App</title>
-    <script type="module" crossorigin src="/assets/index.a23d5bab.js"></script>
-    <link rel="stylesheet" href="/assets/index.8f09ef14.css">
+    <script type="module" crossorigin src="./assets/index.a23d5bab.js"></script>
+    <link rel="stylesheet" href="./assets/index.8f09ef14.css">
   </head>
   <body>
     <div id="app"></div>
