--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PrecTiceAim</title>
-    <script type="module" crossorigin src="./assets/index.a23d5bab.js"></script>
-    <link rel="stylesheet" href="./assets/index.8f09ef14.css">
+    <title>Svelte + TS + Vite App</title>
+    <script type="module" crossorigin src="/assets/index.977a7aaf.js"></script>
+    <link rel="stylesheet" href="/assets/index.55922146.css">
   </head>
   <body>
     <div id="app"></div>
